@@ -1,0 +1,129 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      lang="en"
+      metal:use-macro="here/main_template/macros/master"
+      i18n:domain="plone">
+
+<head>
+    <metal:block fill-slot="top_slot"
+                 tal:define="dummy python:request.set('disable_border',1)" />
+    <metal:block fill-slot="column_one_slot" />
+    <metal:block fill-slot="column_two_slot" />
+</head>
+
+<body>
+<div metal:fill-slot="main"
+     tal:define="redirection_view context/@@plone_redirector_view;
+                 isAnon context/@@plone_portal_state/anonymous;
+                 toLocalizedTime nocall: context/@@plone/toLocalizedTime;">
+
+    <tal:redirect define="redirect_success redirection_view/attempt_redirect" replace="nothing">
+        If the attempt succeeds, we won't see any more of this template
+    </tal:redirect>
+
+    <h1 class="documentFirstHeading"
+        i18n:translate="heading_site_there_seems_to_be_an_error">
+        We're sorry, but that page doesn't exist&hellip;
+    </h1>
+
+    <p i18n:translate="description_site_error_double_check_or_search">
+        Please double check the web address or use the search function on
+        this page to find what you are looking for.
+    </p>
+
+    <p i18n:translate="description_site_error_mail_site_admin">
+        If you are certain you have the correct web address but are
+        encountering an error, please contact the
+        <span i18n:name="site_admin">
+            <a href="#" 
+               i18n:translate="label_site_admin"
+               tal:attributes="href string:${context/portal_url}/contact-info">site administration</a>
+        </span>.
+    </p>
+
+    <p i18n:translate="description_site_error_thank_you">
+        Thank you.
+    </p>
+
+    <!-- Offer search results for suggestions -->
+    <tal:suggestions define="first_parent redirection_view/find_first_parent;
+                             similar_items redirection_view/search_for_similar;
+                             plone_view context/@@plone;
+                             site_properties context/portal_properties/site_properties;
+                             use_view_action site_properties/typesUseViewActionInListings|python:();
+                             desc_length site_properties/search_results_description_length;
+                             desc_ellipsis site_properties/ellipsis;
+                             normalizeString nocall:plone_view/normalizeString;"
+                     condition="python:first_parent is not None or similar_items">
+
+        <h3 i18n:translate="heading_not_found_suggestions">
+            You might have been looking for&hellip;
+        </h3>
+
+        <dl>
+
+        <tal:firstparent condition="first_parent/absolute_url | nothing">
+            <tal:entry define="result_url first_parent/absolute_url;
+                               result_type python:hasattr(first_parent, 'getTypeInfo') and first_parent.getTypeInfo().getId();
+                               item_icon python:plone_view.getIcon(first_parent);
+                               url python:result_type in use_view_action and result_url+'/view' or result_url+'/';"
+                       tal:condition="result_type">
+                <dt tal:define="item_wf_state_class python:'state-' + context.portal_workflow.getInfoFor(first_parent, 'review_state', '');"
+                    tal:attributes="class python:'contenttype-' + normalizeString(result_type)">
+                  <img tal:replace="structure item_icon/html_tag" />
+                   <a
+                     href="#" 
+                     tal:attributes="href url;
+                                     class string:$item_wf_state_class"
+                     tal:content="first_parent/Title" />
+
+                    <span class="discreet" i18n:translate="results_by_author"
+                      tal:condition="python: not isAnon or site_properties.allowAnonymousViewAbout">
+                    by <span tal:omit-tag="" tal:content="first_parent/Creator" i18n:name="author">Author</span>,
+                    <span tal:omit-tag="" tal:content="python:toLocalizedTime(first_parent.ModificationDate(), long_format=1)" i18n:name="date">Modification Date</span>
+                    </span>
+
+                </dt>
+
+                <dd tal:content="python:plone_view.cropText(first_parent.Description(), desc_length, desc_ellipsis)"> Description </dd>
+
+            </tal:entry>
+        </tal:firstparent>
+
+        <tal:similar repeat="similar similar_items">
+            <tal:entry define="result_url similar/getURL;
+                               result_type similar/portal_type;
+                               item_icon python:plone_view.getIcon(similar);
+                               url python:result_type in use_view_action and result_url+'/view' or result_url+'/';">
+                <dt tal:define="item_wf_state_class string:state-${similar/review_state};"
+                    tal:attributes="class python:'contenttype-' + normalizeString(result_type)">
+                    <img tal:replace="structure item_icon/html_tag" />
+                    <a href="#" 
+                       tal:attributes="href url;
+                                       class string:$item_wf_state_class"
+                       tal:content="similar/pretty_title_or_id" />
+
+                    <span class="discreet" i18n:translate="results_by_author"
+                      tal:condition="python: not isAnon or site_properties.allowAnonymousViewAbout">
+                    by <span tal:omit-tag="" tal:content="similar/Creator" i18n:name="author">Author</span>,
+                    <span tal:omit-tag="" tal:content="python:toLocalizedTime(similar.ModificationDate, long_format=1)" i18n:name="date">Modification Date</span>
+                    </span>
+
+                </dt>
+
+                <dd tal:content="python:plone_view.cropText(similar.Description or '', desc_length, desc_ellipsis)">
+                    Description
+                </dd>
+
+            </tal:entry>
+        </tal:similar>
+
+        </dl>
+
+    </tal:suggestions>
+
+</div>
+</body>
+</html>
